--- a/toki-pona/index.html
+++ b/toki-pona/index.html
@@ -50,8 +50,8 @@
         <br>Context will tell whether you're talking about a big book or an important book.
         <br>
         <br><img src="/website/toki-pona/sitelen0/pocket.png" alt="pocket">The constitution is important but it isn't exactly big. (some can even fit in your pocket!)
-        <br><img src="/website/toki-pona/sitelen0/dotdotdot.png" alt="dotdotdot">Euclid's Elements is 13 whole books worth of geometry, which may not be so important to you.
-        <br>But if it is to you, then suli can mean both big and important at the same time.
+        <br>Euclid's Elements is 13 whole books worth of geometry, which may not be so important to you.
+        <br><img src="/website/toki-pona/sitelen0/dotdotdot.png" alt="dotdotdot">But if it is to you, then suli can mean both big and important at the same time.
         <br>It's suli.
         <br>
         <br>So...
@@ -87,7 +87,7 @@
         <br>
         <br>Another important thing to mention is that prescriptivism can be pretty bad in toki pona.
         <br>
-        <br><img src="/website/toki-pona/sitelen0/approx.png" alt="approx">You might have noticed i used ≃ instead of =, because depending on context (or even the speaker, like the computer example), a toki pona phrase can be translated as many things, and an english phrase or word can be translated as many things.
+        <br><img src="/website/toki-pona/sitelen0/approx.png" alt="approx" style="margin-top: 0px">You might have noticed i used ≃ instead of =, because depending on context (or even the speaker, like the computer example), a toki pona phrase can be translated as many things, and an english phrase or word can be translated as many things.
         <br>
         <br>And (yet) another more thing i should talk about is people have their own "nasin" (way, method, road, path, doctrine) of toki pona, non-standard things.
         <br>
