--- a/toki-pona/index.html
+++ b/toki-pona/index.html
@@ -37,7 +37,7 @@
         <br><i>mi jo e ilo <u>toki</u></i> ≃ i have a <u>speech</u> tool/phone <b>(adjective)</b>
         <br>
         <br>Now, you may be thinking:
-        <br><img src="/website/toki-pona/sitelen0/aaaa.png" alt="aaaa">"how am i gonna know what a word means if it has so many meanings??"
+        <br><img src="/website/toki-pona/sitelen0/hmm.png" alt="hmm">"how am i gonna know what a word means if it has so many meanings??"
         <br>
         <br>The answer, as with many things, is <b>context</b>.
         <br>
@@ -49,9 +49,9 @@
         <br>
         <br>Context will tell whether you're talking about a big book or an important book.
         <br>
-        <br><img src="/website/toki-pona/sitelen0/pocket.png" alt="pocket">The constitution is important but it isn't exactly big. (some can even fit in your pocket!)
+        <br><img src="/website/toki-pona/sitelen0/small.png" alt="small">The constitution is important but it isn't exactly big. (some can even fit in your pocket!)
         <br>Euclid's Elements is 13 whole books worth of geometry, which may not be so important to you.
-        <br><img src="/website/toki-pona/sitelen0/dotdotdot.png" alt="dotdotdot">But if it is to you, then suli can mean both big and important at the same time.
+        <br><img src="/website/toki-pona/sitelen0/big.png" alt="big">But if it is to you, then suli can mean both big and important at the same time.
         <br>It's suli.
         <br>
         <br>So...
