--- a/toki-pona/index.html
+++ b/toki-pona/index.html
@@ -21,24 +21,24 @@
         <br>The answer is pretty simple: to let a word mean many things at once that, in another language, may be represented by different words.
         <br>For example, let's look at the first word in the name of the language:
         <br>
-        <br>󱥬
+        <br><span class="tp">󱥬</span>
         <br><i>toki.</i>
         <br>
         <br>It can mean many things: speech, communication, talking...
         <br>But it can also mean language or be used as a greeting:
         <br>
-        <br>󱥬!
+        <br><span class="tp">󱥬!</span>
         <br><img src="/website/toki-pona/sitelen0/toki.png" alt="toki"><i>toki!</i> ≃ hello!
         <br>
         <br>You might have also noticed that one word can be of different functions; that is, it can work as a noun (language), verb (talking) or an adjective (verbal/something that has to do with language/speaking)!
         <br>
-        <br>󱤴󱥡󱤉<u>󱥬</u>󱥔
+        <br><span class="tp">󱤴󱥡󱤉<u>󱥬</u>󱥔</span>
         <br><i>mi sona e <u>toki</u> pona</i> ≃ i know <u>toki</u> pona <b>(noun)</b>
         <br>
-        <br>󱤴<u>󱥬</u>󱥣
+        <br><span class="tp">󱤴<u>󱥬</u>󱥣</span>
         <br><i>mi <u>toki</u> suli</i> ≃ i <u>speak</u> loudly <b>(verb)</b>
         <br>
-        <br>󱤴󱤓󱤉󱤎<u>󱥬</u>
+        <br><span class="tp">󱤴󱤓󱤉󱤎<u>󱥬</u></span>
         <br><i>mi jo e ilo <u>toki</u></i> ≃ i have a <u>speech</u> tool/phone <b>(adjective)</b>
         <br>
         <br>Now, you may be thinking:
@@ -48,7 +48,7 @@
         <br>
         <br>Let's see another example:
         <br>
-        <br>󱥣
+        <br><span class="tp">󱥣</span>
         <br><i>suli.</i>
         <br>
         <br>suli can mean big, tall, heavy, important.
@@ -67,19 +67,19 @@
         <br>What the heck is a keyboard???
         <br>
         <br>It's a tool that makes sound.
-        <br>󱤎󱤕
+        <br><span class="tp">󱤎󱤕</span>
         <br><img src="/website/toki-pona/sitelen0/keyboard.png" alt="keyboard"><i>ilo kalama</i> ≃ instrument/keyboard
         <br>
         <br>What the heck is an apple???
         <br>
         <br>It's a red fruit.
-        <br>󱤚󱤫
+        <br><span class="tp">󱤚󱤫</span>
         <br><img src="/website/toki-pona/sitelen0/apple.png" alt="apple"><i>kili loje</i> ≃ apple
         <br>
         <br>What the heck is a computer???
         <br>
         <br>It's an image tool/information tool/entertainment tool/number tool.
-        <br>󱤎󱥠/󱤎󱥡/󱤎󱤻/󱤎󱤽
+        <br><span class="tp">󱤎󱥠/󱤎󱥡/󱤎󱤻/󱤎󱤽</span>
         <br><i>ilo sitelen</i> ≃ computer/phone/television/display
         <br><i>ilo sona</i> ≃ computer/phone
         <br><img src="/website/toki-pona/sitelen0/computer.png" alt="computer"><i>ilo musi</i> ≃ computer/television/game console/phone
