--- a/toki-pona/index.html
+++ b/toki-pona/index.html
@@ -11,7 +11,7 @@
     <p>
         Alright, so.
         <br>
-        <br>Before i can start teaching the actual language i have to talk a bit about it.
+        <br>Before i can start teaching the actual language, i have to talk a bit about it.
         <br>Unlike a bunch of other languages like English or French or Japanese, which appeared naturally in a community, toki pona is a "constructed language", made by just one person. In this case it's Sonja Lang, a canadian linguist!
         <br>
         <br>And toki pona is very notable because it has just 137 words.
@@ -62,7 +62,7 @@
         <br>
         <br>So...
         <br>You can kinda see the toki pona philosophy here.
-        <br>To simplify what you thing and want to say as much as possible.
+        <br>To simplify what you think and want to say as much as possible.
         <br>And it also leads you to reflect on things just by translating them into toki pona.
         <br>
         <br>What the heck is a keyboard???
@@ -92,13 +92,13 @@
         <br>With ALL that out of the way...
         <br>I'll show you how to speak toki pona bit by bit, starting with the basics of how to say things, and going to little things so you can talk about literally anything with just 137 words.
         <br>
-        <br>(Actually there are 120 core words (but 17 other ones were added as being important but not everyone knows them (and others yet like linluwi aren't known by most people)))
+        <br>(Actually there are 120 core words (but 17 other ones were added as being important (but even then some people don't know all of them)))
         <br>
         <br>Another important thing to mention is that prescriptivism can be pretty bad in toki pona.
         <br>
         <br><img src="/website/toki-pona/sitelen0/approx.png" alt="approx" style="margin-top: 0px">You might have noticed i used ≃ instead of =, because depending on context (or even the speaker, like the computer example), a toki pona phrase can be translated as many things, and an english phrase or word can be translated as many things.
         <br>
-        <br>And (yet) another more thing i should talk about is people have their own "nasin" (way, method, road, path, doctrine) of toki pona, non-standard things.
+        <br>And (yet) another thing i should talk about is people have their own "nasin" (way, method, road, path, doctrine) of toki pona, maybe with some non-standard things.
         <br>
         <br>But i (hope to) show here a way that (hopefully) others will understand.
         <br>
