--- a/toki-pona/index.html
+++ b/toki-pona/index.html
@@ -28,18 +28,18 @@
         <br>But it can also mean language or be used as a greeting:
         <br>
         <br><span class="tp">󱥬!</span>
-        <br><img src="/website/toki-pona/sitelen0/toki.png" alt="toki"><i>toki!</i> ≅ hello!
+        <br><img src="/website/toki-pona/sitelen0/toki.png" alt="toki"><i>toki!</i> ≈ hello!
         <br>
         <br>You might have also noticed that one word can be of different functions; that is, it can work as a noun (language), verb (talking) or an adjective (verbal/something that has to do with language/speaking)!
         <br>
         <br><span class="tp">󱤴󱥡󱤉<u>󱥬</u>󱥔</span>
-        <br><i>mi sona e <u>toki</u> pona</i> ≅ i know <u>toki</u> pona <b>(noun)</b>
+        <br><i>mi sona e <u>toki</u> pona</i> ≈ i know <u>toki</u> pona <b>(noun)</b>
         <br>
         <br><span class="tp">󱤴<u>󱥬</u>󱥣</span>
-        <br><i>mi <u>toki</u> suli</i> ≅ i <u>speak</u> loudly <b>(verb)</b>
+        <br><i>mi <u>toki</u> suli</i> ≈ i <u>speak</u> loudly <b>(verb)</b>
         <br>
         <br><span class="tp">󱤴󱤓󱤉󱤎<u>󱥬</u></span>
-        <br><i>mi jo e ilo <u>toki</u></i> ≅ i have a <u>speech</u> tool/phone <b>(adjective)</b>
+        <br><i>mi jo e ilo <u>toki</u></i> ≈ i have a <u>speech</u> tool/phone <b>(adjective)</b>
         <br>
         <br>Now, you may be thinking:
         <br><img src="/website/toki-pona/sitelen0/hmm.png" alt="hmm">"how am i gonna know what a word means if it has so many meanings??"
@@ -69,22 +69,22 @@
         <br>It's a tool that makes sound.
         <br>
         <br><span class="tp">󱤎󱤕</span>
-        <br><img src="/website/toki-pona/sitelen0/keyboard.png" alt="keyboard"><i>ilo kalama</i> ≅ instrument/keyboard
+        <br><img src="/website/toki-pona/sitelen0/keyboard.png" alt="keyboard"><i>ilo kalama</i> ≈ instrument/keyboard
         <br>
         <br>What the heck is an apple???
         <br>It's a red fruit.
         <br>
         <br><span class="tp">󱤚󱤫</span>
-        <br><img src="/website/toki-pona/sitelen0/apple.png" alt="apple"><i>kili loje</i> ≅ apple
+        <br><img src="/website/toki-pona/sitelen0/apple.png" alt="apple"><i>kili loje</i> ≈ apple
         <br>
         <br>What the heck is a computer???
         <br>It's an image tool/information tool/entertainment tool/number tool.
         <br>
         <br><span class="tp">󱤎󱥠/󱤎󱥡/󱤎󱤻/󱤎󱤽</span>
-        <br><i>ilo sitelen</i> ≅ computer/phone/television/display
-        <br><i>ilo sona</i> ≅ computer/phone
-        <br><img src="/website/toki-pona/sitelen0/computer.png" alt="computer"><i>ilo musi</i> ≅ computer/television/game console/phone
-        <br><i>ilo nanpa</i> ≅ computer/calculator/phone
+        <br><i>ilo sitelen</i> ≈ computer/phone/television/display
+        <br><i>ilo sona</i> ≈ computer/phone
+        <br><img src="/website/toki-pona/sitelen0/computer.png" alt="computer"><i>ilo musi</i> ≈ computer/television/game console/phone
+        <br><i>ilo nanpa</i> ≈ computer/calculator/phone
         <br>
         <br>Depending on what you find important about something, you describe it differently! toki pona can be very subjective.
         <br>But most words defnitely aren't this inexact. Computers can just do so, so, SO many things, toki pona can't really describe it in one way.
@@ -96,7 +96,7 @@
         <br>
         <br>Another important thing to mention is that prescriptivism can be pretty bad in toki pona.
         <br>
-        <br><img src="/website/toki-pona/sitelen0/approx.png" alt="approx" style="margin-top: 0px">You might have noticed i used ≅ instead of =, because depending on context (or even the speaker, like the computer example), a toki pona phrase can be translated as many things, and an english phrase or word can be translated as many things.
+        <br><img src="/website/toki-pona/sitelen0/approx.png" alt="approx" style="margin-top: 0px">You might have noticed i used ≈ instead of =, because depending on context (or even the speaker, like the computer example), a toki pona phrase can be translated as many things, and an english phrase or word can be translated as many things.
         <br>
         <br>And (yet) another thing i should talk about is people have their own "nasin" (way, method, road, path, doctrine) of toki pona, maybe with some non-standard things.
         <br>
