--- a/toki-pona/index.html
+++ b/toki-pona/index.html
@@ -89,6 +89,13 @@
         <br>Depending on what you find important about something, you describe it differently! toki pona can be very subjective.
         <br>But most words defnitely aren't this inexact. Computers can just do so, so, SO many things, toki pona can't really describe it in one way.
         <br>
+        <br>Another thing you might be wondering about is how to pronounce the words.
+        <br>If you've ever heard of the International Phonetic Alphabet, then good news, just use that! But if you don't, you can pronounce them pretty much as in English but with a couple caveats:
+        <br>
+        <br>toki pona has no dipthongs, that is, the double sound in face [feɪs];
+        <br>The first syllable is always stressed, being said stronger like the "pu" in "com<b>pu</b>ter";
+        <br>The j doesn't sound like <b>j</b>acket, but like the y in <b>y</b>es, like in Spanish.
+        <br>
         <br>With ALL that out of the way...
         <br>I'll show you how to speak toki pona bit by bit, starting with the basics of how to say things, and going to little things so you can talk about literally anything with just 137 words.
         <br>
