--- a/toki-pona/index.html
+++ b/toki-pona/index.html
@@ -92,7 +92,7 @@
         <br>Another thing you might be wondering about is how to pronounce the words.
         <br>If you've ever heard of the International Phonetic Alphabet, then good news, just use that! But if you don't, you can pronounce them pretty much as in English but with a couple caveats:
         <br>
-        <br>toki pona has no dipthongs, that is, the double sound in face [feɪs];
+        <br>toki pona has no dipthongs, like the double sound in face [feɪs];
         <br>The first syllable is always stressed, being said stronger like the "pu" in "com<b>pu</b>ter";
         <br>The j doesn't sound like <b>j</b>acket, but like the y in <b>y</b>es, like in Spanish.
         <br>
