--- a/toki-pona/index.html
+++ b/toki-pona/index.html
@@ -93,7 +93,7 @@
         <br>If you've ever heard of the International Phonetic Alphabet, then good news, just use that! But if you don't, you can pronounce them pretty much as in English but with a couple caveats:
         <br>
         <br>toki pona has no dipthongs, like the double sound in face [feɪs];
-        <br>The first syllable is always stressed, being said stronger like the "pu" in "com<b>pu</b>ter";
+        <br>The first syllable is always stressed, being said stronger like the "pu" in "com<b>pu</b>ter" (<b>to</b>ki <b>po</b>na);
         <br>The j doesn't sound like <b>j</b>acket, but like the y in <b>y</b>es, like in Spanish.
         <br>
         <br>With ALL that out of the way...
