--- a/toki-pona/index.html
+++ b/toki-pona/index.html
@@ -92,9 +92,9 @@
         <br>Another thing you might be wondering about is how to pronounce the words.
         <br>If you've ever heard of the International Phonetic Alphabet, then good news, just use that! But if you don't, you can pronounce them pretty much as in English but with a couple caveats:
         <br>
-        <br>toki pona has no dipthongs, like the double sound in face [feɪs];
-        <br>The first syllable is always stressed, being said stronger like the "pu" in "com<b>pu</b>ter" (<b>to</b>ki <b>po</b>na);
-        <br>The j doesn't sound like <b>j</b>acket, but like the y in <b>y</b>es, like in Spanish.
+        <br>toki pona has no dipthongs, like the double sound in f<u>a</u>ce [f<u>eɪ</u>s];
+        <br>The first syllable is always stressed, being said stronger like the "pu" in "com<u>pu</u>ter" (<u>to</u>ki <u>po</u>na);
+        <br>The j doesn't sound like <u>j</u>acket, but like the y in <u>y</u>es, like in Spanish.
         <br>
         <br>With ALL that out of the way...
         <br>I'll show you how to speak toki pona bit by bit, starting with the basics of how to say things, and going to little things so you can talk about literally anything with just 137 words.
