--- a/toki-pona/index.html
+++ b/toki-pona/index.html
@@ -92,8 +92,8 @@
         <br>Another thing you might be wondering about is how to pronounce the words.
         <br>If you've ever heard of the International Phonetic Alphabet, then good news, just use that! But if you don't, you can pronounce them pretty much as in English but with a couple caveats:
         <br>
-        <br>toki pona has no dipthongs, like the double sound in f<u>a</u>ce [f<u>eɪ</u>s];
-        <br>The first syllable is always stressed, being said stronger like the "pu" in "com<u>pu</u>ter" (<u>to</u>ki <u>po</u>na);
+        <br>toki pona has no dipthongs, like the double sound in f<u>a</u>ce <span class="sp">[f<u>eɪ</u>s]</span>;
+        <br>The first syllable is always stressed, being said stronger like the "pu" in "com<u>pu</u>ter" <span class="sp">(<u>to</u>ki <u>po</u>na)</span>;
         <br>The j doesn't sound like <u>j</u>acket, but like the y in <u>y</u>es, like in Spanish.
         <br>
         <br>With ALL that out of the way...
