--- a/toki-pona/intro.html
+++ b/toki-pona/intro.html
@@ -3,7 +3,7 @@
     <head>
         <link href="https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,350;0,700;1,350&display=swap" rel="stylesheet"> 
         <meta charset="UTF-8">
-        <title>lipu sona</title>
+        <title>introduction</title>
         <link href="/website/toki-pona/style.css" rel="stylesheet" type="text/css" media="all"></head>
 
     <body>
