--- a/toki-pona/one.html
+++ b/toki-pona/one.html
@@ -12,10 +12,14 @@
         Alright! Let's start off with the very absolute basics of saying things in toki pona.
         <br>In super dumb basic terms, a sentence can be divided into 2 (sometimes 3) main bits:
         <br>
-        <br><ul><li><u>subject</u> (the main actor)<br></li>
+        <ul><li><u>subject</u> (the main actor)<br></li>
             <li><u>predicate</u>:
             <ul><li><u>verb</u> (what the subject is/does)<br></li>
             <li><u>object</u> (what the subject does to)</li></ul></li>
         </ul>
+        <br><i>John eats an apple.</i>
+        <br>John is the main actor, his action is eating and what he eats is an apple!
+        <br>
+        <br>(btw, the main order used in English is SVO (subject verb object), but other languages (actually most of them!) may use other orders of things)
     </p>
     </body>
