--- a/toki-pona/one.html
+++ b/toki-pona/one.html
@@ -24,5 +24,17 @@
         <br>John is the main actor, his action is eating and what he eats is an apple!
         <br>
         <br>(btw, the main order used in English is SVO (subject verb object), but other languages (actually most of them!) may use other orders of things)
+        <br>
+        <br>In toki pona, it works much the same way (in SVO order too!), but here, the different phrase bits are separated by 2 particles:
+        <br>
+        <br><span class="tp">󱤧</span>
+        <br><i>li</i>: comes before the predicate
+        <br>
+        <br><span class="tp">󱤉</span>
+        <br><i>e</i>: comes before the object (if there is one)
+        <br>
+        <br>Basically: 
+        <br>
+        <br>Since we're just starting, i'll give you some words to start off with, some of them you already know (if you looked at the intro first):
     </p>
     </body>
