--- a/toki-pona/one.html
+++ b/toki-pona/one.html
@@ -34,6 +34,7 @@
         <br><i>e</i>: comes before the object (if there is one)
         <br>
         <br>Basically: 
+        <br><i>[subject] li [verb] (e [object])</i>
         <br>
         <br>Since we're just starting, i'll give you some words to start off with, some of them you already know (if you looked at the intro first):
     </p>
