--- a/toki-pona/one.html
+++ b/toki-pona/one.html
@@ -19,7 +19,7 @@
         <p>
         Let's see an example in English:
         <br>
-        <br><i>John eats an apple.</i>
+        <br><i><u class="r">John</u> <u class="y">eats</u> <u class="b">an apple</u>.</i>
         <br>
         <br>John is the main actor, his action is eating and what he eats is an apple!
         <br>
@@ -34,7 +34,7 @@
         <br><i>e</i>: comes before the object (if there is one)
         <br>
         <br>Basically: 
-        <br><i>[subject] li [verb] (e [object])</i>
+        <br><i<><u class="r">[subject]</u> li <u class="y">[verb]</u> (e <u class="b">[object]</u>)</i>
         <br>
         <br>Since we're just starting, i'll give you some words to start off with, some of them you already know (if you looked at the intro first):
     </p>
