--- a/toki-pona/one.html
+++ b/toki-pona/one.html
@@ -11,10 +11,10 @@
     <p>
         Alright! Let's start off with the very absolute basics of saying things in toki pona.
         <br>In super dumb basic terms, a sentence can be divided into 2 (sometimes 3) main bits:</p>
-        <ul><li><u>subject</u> (the main actor)<br></li>
+        <ul><li><u class="r">subject</u> (the main actor)<br></li>
             <li><u>predicate</u>:
-            <ul><li><u>verb</u> (what the subject is/does)<br></li>
-            <li><u>object</u> (what the subject does to)</li></ul></li>
+            <ul><li><u class="y">verb</u> (what the subject is/does)<br></li>
+            <li><u class="b">object</u> (what the subject does to)</li></ul></li>
         </ul>
         <p>
         Let's see an example in English:
