--- a/misc.html
+++ b/misc.html
@@ -5,7 +5,7 @@
         <meta charset="UTF-8">
         <title>> misc</title>
         <link href="/website/styles/miscstyle.css" rel="stylesheet" type="text/css" media="all"></head>
-    <body>
+    <body class="crt">
 
     <h1>misc</h1>
     <p>After going down the stairs and into the basement, you wander into a green door.
