--- a/misc.html
+++ b/misc.html
@@ -6,7 +6,7 @@
         <title>> misc</title>
         <link href="/website/styles/miscstyle.css" rel="stylesheet" type="text/css" media="all"></head>
     <body>
-        <div class="crt"><h1>misc</h1>
+        <h1>misc</h1>
     <p>After going down the stairs and into the basement, you wander into a green door.
         <br>It seems to have the words "staff only" written on it, but it's been scribbled over.
         <br>You step into a dark room, it's completely empty and somehow lit by a monochromatic green light. It's slightly nauseating.
@@ -17,5 +17,5 @@
             <li><a href="/website/misc/phrases">look at the sticky notes</a></li>
             <li><a href="/website/misc/folder">open the folder</a></li>
             <li><a href="/website">walk back out the door</a></li>
-        </ul></div>
+        </ul>
     </body>
