changed it again

--- a/sitelog.html
+++ b/sitelog.html
@@ -30,7 +30,7 @@
         </div></nav>
         <div class="main">
         <h1>sitelog</h1>
-    <p><b>More about the site: </b> I make this site with Firefox in Ubuntu, with a crappy 1366x768 display (with night light turned on so i have to turn it off every time i want to mess with color which is a pain)<br>very much untested on mobile, sorry<br>and that's it enjoy the sitelog ig</p>
+    <p><b>More about the site: </b> I make this site with Firefox in Ubuntu, with a crappy 1366x768 display<br>very much untested on mobile, sorry<br>and that's it enjoy the sitelog ig</p>
         <div id="entry" style="margin-bottom: 50px"><div id="statuscafe"><div id="statuscafe-username"></div><div id="statuscafe-content"></div></div><script src="https://status.cafe/current-status.js?name=cvni81" defer></script></div>
     <div id="entry">
         <h2>8/10/2022 08:09</h2>
