--- a/sitelog.html
+++ b/sitelog.html
@@ -6,7 +6,7 @@
         <title>sitelog</title>
         <link href="/website/styles/logstyle.css" rel="stylesheet" type="text/css" media="all"><style>
             #statuscafe{margin-top: 20px; margin-bottom: 30px}
-            #entry{padding-left: 8px; margin-bottom: 40px}
+            #entry{margin-bottom: 40px}
             h2{font-size: large}
             h2::before{content:"> "; color: #a87000}
             #entry h2{margin-bottom: 7px}
