--- a/misc/folder/hi.html
+++ b/misc/folder/hi.html
@@ -1,9 +1,16 @@
 <!DOCTYPE html>
 <html>
+    <head><style>
+    @import url('https://fonts.googleapis.com/css2?family=Work+Sans:wght@600&display=swap');
+    body{
+        background-color: #6701c7;
+        color: #f0f0f0;
+        font-family: 'Work Sans', sans-serif}
+    a{color: #f0f0f0}
+    </style></head>
     <body>
-        _(:3」∠)_<br>hi
+        <p style="font-size: x-large; text-shadow: #202020 5px 5px;">_(:3」∠)_<br>hi</p>
 
-        <br><br><a href="/website/misc/folder">go back</a>
+        <br><br><br><br><br><br><a href="/website/misc/folder">go back</a>
 
-
-        </blockquote></figure></body>
+</body>
