--- a/newindex.html
+++ b/newindex.html
@@ -9,7 +9,7 @@
         <link href="https://fonts.googleapis.com/css2?family=Atkinson+Hyperlegible:wght@700&display=swap" rel="stylesheet"> 
         <meta charset="UTF-8">
         <title>cvni81</title>
-        <link href="/website/styles/style.css" rel="stylesheet" type="text/css" media="all"><style>
+        <link href="/website/styles/newstyle.css" rel="stylesheet" type="text/css" media="all"><style>
             @font-face{font-family: 'Vera Humana 95';
             font-weight: normal;
             src: url("/website/styles/Vera.ttf")}
