--- a/newindex.html
+++ b/newindex.html
@@ -22,6 +22,7 @@
             font-family: 'Vera Humana 95', sans-serif;}
             .words{color: #f0f0f0;
             font-family: 'Atkinson Hyperlegible', sans-serif}
+            a{font-size: larger}
             a.misc, a.i, a.log, a.buttons{font-style: italic;}
             a.buttons:hover{color: #7ba0cc; text-decoration-color:#7ba0cc}
             a.misc:hover{color: #15c405;
@@ -44,12 +45,10 @@
         <a href="/website/about">about</a>
         <a href="/website/musicians">musicians</a>
         <a href="/website/websites" class="websites">websites</a><br>
-        <br>
         <a href="/website/words" class="words">words</a>
         <a href="/website/blender">blender</a>
         <a href="/website/doodles" class="i">doodles</a>
         <a href="/website/misc" class="misc">misc</a><br>
-        <br>
         <a href="/website/buttons" class="buttons">buttons</a>
         <a href="https://cvni81.123guestbook.com/">guestbook</a>
         <a href="/website/sitelog" class="log">sitelog</a>
