--- a/newindex.html
+++ b/newindex.html
@@ -22,7 +22,7 @@
             font-family: 'Vera Humana 95', sans-serif;}
             .words{color: #f0f0f0;
             font-family: 'Atkinson Hyperlegible', sans-serif}
-            a{font-size: x-large}
+            a{font-size: xx-large}
             a.misc, a.i, a.log, a.buttons{font-style: italic;}
             a.buttons:hover{color: #7ba0cc; text-decoration-color:#7ba0cc}
             a.misc:hover{color: #15c405;
