--- a/newindex.html
+++ b/newindex.html
@@ -22,7 +22,6 @@
             font-family: 'Vera Humana 95', sans-serif;}
             .words{color: #f0f0f0;
             font-family: 'Atkinson Hyperlegible', sans-serif}
-            a{font-size: xx-large}
             a.misc, a.i, a.log, a.buttons{font-style: italic;}
             a.buttons:hover{color: #7ba0cc; text-decoration-color:#7ba0cc}
             a.misc:hover{color: #15c405;
@@ -41,7 +40,7 @@
     Making this website has been really fun, and i hope you like having a gander at it.<br>
     This thing has been pretty much always in construction since i've started it, so things may appear and disappear from time to time. It's normal around here i guess.<br>Make yourself at home!<br>
     Also: they/them, pt-br, en, tok, <18yo</p>
-    <p><b>discord</b>: @cvni81#4837<br><b>email</b>: cvni81@gmail.com</p><p>
+    <p><b>discord</b>: @cvni81#4837<br><b>email</b>: cvni81@gmail.com</p><p style="font-size:xx-large">
         <a href="/website/about">about</a> . <a href="/website/musicians">musicians</a> . <a href="/website/websites" class="websites">websites</a><br>
         <a href="/website/words" class="words">words</a> . <a href="/website/blender">blender</a> . <a href="/website/doodles" class="i">doodles</a> . <a href="/website/misc" class="misc">misc</a><br>
         <a href="/website/buttons" class="buttons">buttons</a> . <a href="https://cvni81.123guestbook.com/">guestbook</a> . <a href="/website/sitelog" class="log">sitelog</a>
