--- a/newindex.html
+++ b/newindex.html
@@ -10,7 +10,6 @@
         <meta charset="UTF-8">
         <title>cvni81</title>
         <link href="/website/styles/newstyle.css" rel="stylesheet" type="text/css" media="all"><style>
-            a.misc, a.i, a.log, a.buttons{font-style: italic;}
             a.buttons:hover{color: #7ba0cc; text-decoration-color:#7ba0cc}
             a.misc:hover{color: #15c405;
             text-decoration-color: #15c405;}
@@ -18,6 +17,7 @@
             text-decoration-color: #ffa900;}
             a.websites:hover{color: #F2CF68;
             text-decoration-color: #F2CF68;}
+            a{text-decoration-thickness: 3px;}
         </style></head>
 
     <body>
