--- a/newindex.html
+++ b/newindex.html
@@ -22,10 +22,11 @@
 
     <body>
     <h1>cvni81's website</h1>
+    <details><summary>more info</summary></details>
     <p>Hi! Welcome to my corner of the web where i put stuff i like, stuff i do and other things too!<br>
     Making this website has been really fun, and i hope you like having a gander at it.<br>
     This thing has been pretty much always in construction since i've started it, so things may appear and disappear from time to time. It's normal around here i guess.<br>Make yourself at home!<br>
-    Also: they/them, pt-br, en, tok, <18yo</p>
+    Also: they/them, pt-br, en, tok, <18yo</p></details>
     <p><b>discord</b>: @cvni81#4837<br><b>email</b>: cvni81@gmail.com</p><p style="font-size:xx-large">
         <a href="/website/about">about</a> . <a href="/website/musicians">musicians</a> . <a href="/website/websites" class="websites">websites</a><br>
         <a href="/website/words" class="words">words</a> . <a href="/website/blender">blender</a> . <a href="/website/doodles" class="i">doodles</a> . <a href="/website/misc" class="misc">misc</a><br>
