--- a/newindex.html
+++ b/newindex.html
@@ -22,7 +22,7 @@
 
     <body>
     <h1>cvni81's website</h1>
-    <details><summary>more info</summary></details>
+    <details><summary>more info</summary>
     <p>Hi! Welcome to my corner of the web where i put stuff i like, stuff i do and other things too!<br>
     Making this website has been really fun, and i hope you like having a gander at it.<br>
     This thing has been pretty much always in construction since i've started it, so things may appear and disappear from time to time. It's normal around here i guess.<br>Make yourself at home!<br>
