--- a/newindex.html
+++ b/newindex.html
@@ -17,7 +17,7 @@
             text-decoration-color: #ffa900;}
             a.websites:hover{color: #F2CF68;
             text-decoration-color: #F2CF68;}
-            a{text-decoration-thickness: 3px;}
+            a{text-decoration-thickness: 3px; font-weight: normal;}
         </style></head>
 
     <body>
