--- a/newindex.html
+++ b/newindex.html
@@ -18,6 +18,7 @@
             a.websites:hover{color: #F2CF68;
             text-decoration-color: #F2CF68;}
             a{text-decoration-thickness: 3px; font-weight: normal;}
+            p{max-width: 764px;}
         </style></head>
 
     <body>
