--- a/newindex.html
+++ b/newindex.html
@@ -19,6 +19,7 @@
             text-decoration-color: #F2CF68;}
             a{text-decoration-thickness: 3px; font-weight: normal;}
             p{max-width: 764px;}
+            body{padding-top: 0px; position: absolute; top: 50%; transform: translateY(-50%);}
         </style></head>
 
     <body>
