--- a/newindex.html
+++ b/newindex.html
@@ -32,5 +32,5 @@
     <p><b>discord</b>: @cvni81#4837<br><b>email</b>: cvni81@gmail.com</p></details><p style="font-size:xx-large">
         <a href="/website/about">about</a> . <a href="/website/musicians">musicians</a> . <a href="/website/websites" class="websites">websites</a><br>
         <a href="/website/words" class="words">words</a> . <a href="/website/blender">blender</a> . <a href="/website/doodles" class="i">doodles</a> . <a href="/website/misc" class="misc">misc</a><br>
-        <a href="/website/buttons" class="buttons">buttons</a> . <a href="https://cvni81.123guestbook.com/">guestbook</a> . <a href="/website/sitelog" class="log">sitelog</a>
+        <a href="/website/buttons" class="buttons">buttons</a> . <a href="/website/sitelog" class="log">sitelog</a>
     </p></body>
