--- a/newindex.html
+++ b/newindex.html
@@ -17,7 +17,7 @@
             text-decoration-color: #ffa900;}
             a.websites:hover{color: #F2CF68;
             text-decoration-color: #F2CF68;}
-            a{text-decoration-thickness: 3px; font-weight: normal;}
+            a{width: 200px; height: 150px; border: solid #f0f0f0 2px; border-radius: 3px;}
             p{max-width: 764px;}
             body{padding-top: 0px; position: absolute; top: 50%; transform: translateY(-50%);}
         </style></head>
@@ -29,8 +29,8 @@
     Making this website has been really fun, and i hope you like having a gander at it.<br>
     This thing has been pretty much always in construction since i've started it, so things may appear and disappear from time to time. It's normal around here i guess.<br>Make yourself at home!<br>
     Also: they/them, pt-br, en, tok, <18yo</p>
-    <p><b>discord</b>: @cvni81#4837<br><b>email</b>: cvni81@gmail.com</p></details><p style="font-size:xx-large">
+    <p><b>discord</b>: @cvni81#4837<br><b>email</b>: cvni81@gmail.com</p></details><span>
         <a href="/website/about">about</a> . <a href="/website/musicians">musicians</a> . <a href="/website/websites" class="websites">websites</a><br>
         <a href="/website/words" class="words">words</a> . <a href="/website/blender">blender</a> . <a href="/website/doodles" class="i">doodles</a> . <a href="/website/misc" class="misc">misc</a><br>
         <a href="/website/buttons" class="buttons">buttons</a> . <a href="/website/sitelog" class="log">sitelog</a>
-    </p></body>
+    </span></body>
