--- a/newindex.html
+++ b/newindex.html
@@ -10,6 +10,21 @@
         <meta charset="UTF-8">
         <title>cvni81</title>
         <link href="/website/styles/newstyle.css" rel="stylesheet" type="text/css" media="all"><style>
+            @font-face{font-family: 'Vera Humana 95';
+            font-weight: normal;
+            src: url("/website/styles/Vera.ttf")}
+            @font-face{font-family: 'Vera Humana 95';
+            font-weight: bold;
+            src: url("/website/styles/Verab.ttf")}
+            .misc{color: #f0f0f0;
+            font-family: 'Space Grotesk', sans-serif;}
+            .websites{color: #f0f0f0;
+            font-family: 'Vera Humana 95', sans-serif;}
+            .words{color: #f0f0f0;
+            font-family: 'Atkinson Hyperlegible', sans-serif}
+            a.misc, a.i, a.log, a.buttons{font-style: italic;}
+            .i, .buttons{font-family: 'Libre Baskerville', serif}
+            .log{font-family: 'IBM Plex Mono', sans-serif}
             a.buttons:hover{color: #7ba0cc; text-decoration-color:#7ba0cc}
             a.misc:hover{color: #15c405;
             text-decoration-color: #15c405;}
