--- a/newindex.html
+++ b/newindex.html
@@ -22,17 +22,19 @@
             font-family: 'Vera Humana 95', sans-serif;}
             .words{color: #f0f0f0;
             font-family: 'Atkinson Hyperlegible', sans-serif}
+            a{display: inline-block; width: 120px; height: 90px; border: solid #808080 1.5px; border-radius: 10px; margin: 7px; text-decoration: none; color: #808080}
+            a:hover{color: #f0f0f0; border-color: #f0f0f0; background: #202020}
             a.misc, a.i, a.log, a.buttons{font-style: italic;}
             .i, .buttons{font-family: 'Libre Baskerville', serif}
             .log{font-family: 'IBM Plex Mono', sans-serif}
-            a.buttons:hover{color: #7ba0cc; text-decoration-color:#7ba0cc}
+            a.buttons:hover{color: #7ba0cc; 
+            border-color: #7ba0cc; background: #475464;}
             a.misc:hover{color: #15c405;
-            text-decoration-color: #15c405;}
+            border-color: #15c405; background: #072502;}
             a.log:hover{color: #ffa900;
-            text-decoration-color: #ffa900;}
+            border-color: #ffa900; background: #543800;}
             a.websites:hover{color: #F2CF68;
-            text-decoration-color: #F2CF68;}
-            a{display: inline-block; width: 120px; height: 90px; border: solid #f0f0f0 1.5px; border-radius: 10px; margin: 7px}
+            border-color: #F2CF68; background: #0f008a;}
             p{max-width: 764px;}
             body{padding-top: 0px; position: absolute; top: 50%; transform: translateY(-50%);}
         </style></head>
@@ -46,6 +48,6 @@
     Also: they/them, pt-br, en, tok, <18yo</p>
     <p><b>discord</b>: @cvni81#4837<br><b>email</b>: cvni81@gmail.com</p></details><span>
         <a href="/website/about">about</a><a href="/website/musicians">musicians</a><a href="/website/websites" class="websites">websites</a><br>
-        <a href="/website/words" class="words">words</a><a href="/website/blender">blender</a><a href="/website/doodles" class="i">doodles</a><a href="/website/misc" class="misc">misc</a><br>
-        <a href="/website/buttons" class="buttons">buttons</a><a href="/website/sitelog" class="log">sitelog</a>
+        <a href="/website/words" class="words">words</a><a href="/website/blender">blender</a><a href="/website/doodles" class="i">doodles</a><br>
+        <a href="/website/misc" class="misc">misc</a><a href="/website/buttons" class="buttons">buttons</a><a href="/website/sitelog" class="log">sitelog</a>
     </span></body>
