--- a/newindex.html
+++ b/newindex.html
@@ -16,12 +16,9 @@
             @font-face{font-family: 'Vera Humana 95';
             font-weight: bold;
             src: url("/website/styles/Verab.ttf")}
-            .misc{color: #f0f0f0;
-            font-family: 'Space Grotesk', sans-serif;}
-            .websites{color: #f0f0f0;
-            font-family: 'Vera Humana 95', sans-serif;}
-            .words{color: #f0f0f0;
-            font-family: 'Atkinson Hyperlegible', sans-serif}
+            .misc{font-family: 'Space Grotesk', sans-serif;}
+            .websites{font-family: 'Vera Humana 95', sans-serif;}
+            .words{font-family: 'Atkinson Hyperlegible', sans-serif}
             a{display: inline-block; width: 120px; height: 90px; border: solid #808080 1.5px; border-radius: 10px; margin: 7px; text-decoration: none; color: #808080}
             a:hover{color: #f0f0f0; border-color: #f0f0f0; background: #202020}
             a.misc, a.i, a.log, a.buttons{font-style: italic;}
