--- a/newindex.html
+++ b/newindex.html
@@ -10,28 +10,14 @@
         <meta charset="UTF-8">
         <title>cvni81</title>
         <link href="/website/styles/newstyle.css" rel="stylesheet" type="text/css" media="all"><style>
-            @font-face{font-family: 'Vera Humana 95';
-            font-weight: normal;
-            src: url("/website/styles/Vera.ttf")}
-            @font-face{font-family: 'Vera Humana 95';
-            font-weight: bold;
-            src: url("/website/styles/Verab.ttf")}
-            .misc{font-family: 'Space Grotesk', sans-serif;}
-            .websites{font-family: 'Vera Humana 95', sans-serif;}
-            .words{font-family: 'Atkinson Hyperlegible', sans-serif}
-            a{display: inline-block; width: 120px; height: 90px; border: solid #808080 1.5px; border-radius: 10px; margin: 7px; text-decoration: none; color: #808080}
-            a:hover{color: #f0f0f0; border-color: #f0f0f0; background: #202020}
-            a.misc, a.i, a.log, a.buttons{font-style: italic;}
-            .i, .buttons{font-family: 'Libre Baskerville', serif}
-            .log{font-family: 'IBM Plex Mono', sans-serif}
-            a.buttons:hover{color: #7ba0cc; 
-            border-color: #7ba0cc; background: #475464;}
+            a.buttons:hover{color: #7ba0cc; text-decoration-color:#7ba0cc}
             a.misc:hover{color: #15c405;
-            border-color: #15c405; background: #072502;}
+            text-decoration-color: #15c405;}
             a.log:hover{color: #ffa900;
-            border-color: #ffa900; background: #543800;}
+            text-decoration-color: #ffa900;}
             a.websites:hover{color: #F2CF68;
-            border-color: #F2CF68; background: #0f008a;}
+            text-decoration-color: #F2CF68;}
+            a{text-decoration-thickness: 3px; font-weight: normal;}
             p{max-width: 764px;}
             body{padding-top: 0px; position: absolute; top: 50%; transform: translateY(-50%);}
         </style></head>
@@ -43,8 +29,8 @@
     Making this website has been really fun, and i hope you like having a gander at it.<br>
     This thing has been pretty much always in construction since i've started it, so things may appear and disappear from time to time. It's normal around here i guess.<br>Make yourself at home!<br>
     Also: they/them, pt-br, en, tok, <18yo</p>
-    <p><b>discord</b>: @cvni81#4837<br><b>email</b>: cvni81@gmail.com</p></details><span>
-        <a href="/website/about">about</a><a href="/website/musicians">musicians</a><a href="/website/websites" class="websites">websites</a><br>
-        <a href="/website/words" class="words">words</a><a href="/website/blender">blender</a><a href="/website/doodles" class="i">doodles</a><br>
-        <a href="/website/misc" class="misc">misc</a><a href="/website/buttons" class="buttons">buttons</a><a href="/website/sitelog" class="log">sitelog</a>
-    </span></body>
+    <p><b>discord</b>: @cvni81#4837<br><b>email</b>: cvni81@gmail.com</p></details><p style="font-size:xx-large">
+        <a href="/website/about">about</a> . <a href="/website/musicians">musicians</a> . <a href="/website/websites" class="websites">websites</a><br>
+        <a href="/website/words" class="words">words</a> . <a href="/website/blender">blender</a> . <a href="/website/doodles" class="i">doodles</a> . <a href="/website/misc" class="misc">misc</a><br>
+        <a href="/website/buttons" class="buttons">buttons</a> . <a href="/website/sitelog" class="log">sitelog</a>
+    </p></body>
