--- a/newindex.html
+++ b/newindex.html
@@ -23,7 +23,7 @@
         </style></head>
 
     <body>
-    <h1>cvni81's website</h1><p><b>under construction!</b></p>
+    <h1>cvni81's website</h1><p style="margin-top:-10px; margin-bottom:10px; font-size: larger"><b>>> under construction! <<</b></p>
     <details><summary>more info</summary>
     <p>Hi! Welcome to my corner of the web where i put stuff i like, stuff i do and other things too!<br>
     Making this website has been really fun, and i hope you like having a gander at it.<br>
