--- a/index.html
+++ b/index.html
@@ -9,25 +9,7 @@
         <link href="https://fonts.googleapis.com/css2?family=Atkinson+Hyperlegible:wght@700&display=swap" rel="stylesheet"> 
         <meta charset="UTF-8">
         <title>cvni81</title>
-        <link href="/website/styles/style.css" rel="stylesheet" type="text/css" media="all"><style>
-            @font-face{font-family: 'Vera Humana 95';
-            font-weight: normal;
-            src: url("/website/styles/Vera.ttf")}
-
-            @font-face{font-family: 'Vera Humana 95';
-            font-weight: bold;
-            src: url("/website/styles/Verab.ttf")}
-            .all{display: grid;
-            grid-template-columns: 350px 1px auto}
-            body{min-height:100vh;
-            margin:0px;}
-            .misc{color: #f0f0f0;
-            font-family: 'Space Grotesk', sans-serif;}
-            .websites{color: #f0f0f0;
-            font-family: 'Vera Humana 95', sans-serif;}
-            .words{color: #f0f0f0;
-            font-family: 'Atkinson Hyperlegible', sans-serif}
-            a.misc, a.i, a.log, a.buttons{font-style: italic;}
+        <link href="/website/styles/newstyle.css" rel="stylesheet" type="text/css" media="all"><style>
             a.buttons:hover{color: #7ba0cc; text-decoration-color:#7ba0cc}
             a.misc:hover{color: #15c405;
             text-decoration-color: #15c405;}
@@ -35,35 +17,20 @@
             text-decoration-color: #ffa900;}
             a.websites:hover{color: #F2CF68;
             text-decoration-color: #F2CF68;}
-            .i, .buttons{font-family: 'Libre Baskerville', serif}
-            .log{font-family: 'IBM Plex Mono', sans-serif}
-            .small{font-size: large}
+            a{text-decoration-thickness: 3px; font-weight: normal;}
+            p{max-width: 764px;}
+            body{padding-top: 0px; position: absolute; top: 50%; transform: translateY(-50%);}
         </style></head>
 
     <body>
-    <div class="all">
-    <div style="padding: 0px 20px; background-color: #202020; min-height:100vh">
-    <h1 style="text-shadow:#080808 5px 5px; line-height: 1.25">cvni81's website</h1>
+    <h1>cvni81's website</h1><p style="margin-top:-10px; margin-bottom:10px; font-size: larger"><b>>> under construction! <<</b></p>
+    <details><summary>more info</summary>
     <p>Hi! Welcome to my corner of the web where i put stuff i like, stuff i do and other things too!<br>
     Making this website has been really fun, and i hope you like having a gander at it.<br>
     This thing has been pretty much always in construction since i've started it, so things may appear and disappear from time to time. It's normal around here i guess.<br>Make yourself at home!<br>
     Also: they/them, pt-br, en, tok, <18yo</p>
-    <p><b>discord</b>: @cvni81#4837<br><b>email</b>: cvni81@gmail.com</p>
-    </div>
-    <div style="border:solid #f0f0f0 2px"></div>
-    <div style="font-size:x-large; padding-left: 50px; margin: auto 0;">
-        <a href="/website/about">about</a> .......... <span class="small">stuff about me</span><br>
-        <a href="/website/musicians">musicians</a> .......... <span class="small">good music people</span><br>
-        <a href="/website/websites" class="websites">websites</a> .......... <span class="small">cool websites i've collected</span><br>
-        <br>
-        <a href="/website/words" class="words">words</a> .......... <span class="small">poems and other things</span><br>
-        <a href="/website/blender">blender</a> .......... <span class="small">stuff i've made in blender</span><br>
-        <a href="/website/doodles" class="i">doodles</a> .......... <span class="small">stuff i draw</span><br>
-        <a href="/website/misc" class="misc">misc</a> .......... <span class="small">other things</span><br>
-        <br>
-        <a href="/website/buttons" class="buttons">buttons</a> .......... <span class="small">links to other websites</span><br>
-        <a href="https://cvni81.123guestbook.com/">guestbook</a> .......... <span class="small">say hi!</span><br>
-        <a href="/website/sitelog" class="log">sitelog</a> .......... <span class="small">changes to the site</span>
-    </div>
-    </div>
-    </body>
+    <p><b>discord</b>: @cvni81#4837<br><b>email</b>: cvni81@gmail.com</p></details><p style="font-size:xx-large">
+        <a href="/website/about">about</a> . <a href="/website/musicians">musicians</a> . <a href="/website/websites" class="websites">websites</a><br>
+        <a href="/website/words" class="words">words</a> . <a href="/website/blender">blender</a> . <a href="/website/doodles" class="i">doodles</a> . <a href="/website/misc" class="misc">misc</a><br>
+        <a href="/website/buttons" class="buttons">buttons</a> . <a href="/website/sitelog" class="log">sitelog</a>
+    </p></body>
