--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
             a{text-decoration-thickness: 3px; font-weight: normal;}
             p{max-width: 764px;}
             body{padding-top: 0px; position: absolute; top: 50%; transform: translateY(-50%);}
+            h1{font-size: 70px}
         </style></head>
 
     <body>
