--- a/newabout.html
+++ b/newabout.html
@@ -8,9 +8,8 @@
         <link href="/website/styles/newstyle.css" rel="stylesheet" type="text/css" media="all"><style>
             p{max-width: 775px}
         </style></head>
-
     <body>
-    <a href="/website">home</a>
+        <nav><a href="/website">home</a></nav>
     <h1>about me</h1>
     <p>Hi! I'm cvni81 ("mute ante" in toki pona), and this is my website thing.<br>
     I speak Portuguese (native), English (near-native) and toki pona (proficient).<br>
@@ -26,5 +25,5 @@
         <li><a href="/website/doodles" class="small">Doodling things</a>;</li>
         <li>Seeing new places and taking photos of them.</li></ul>
     <p>Other things i'm (maybe tangentially) interested in include (but aren't limited to) flags, botany, design, typography and languages. A bunch of stuff.<br>
-    Regarding gender and things, i'm... kinda confused. Non-binary i guess. Use they/them just to be sure. And i'm pretty sure i have OCD.</p>
+    Regarding gender and things, i'm... kinda confused. Non-binary i guess. Use they/them just to be sure. And i'm pretty sure i have OCD.<br>h<br>h<br>h<br>h<br>h<br>h<br>h<br>h<br>h<br>h<br>h<br>h<br>h</p>
     </body>
