--- a/about.html
+++ b/about.html
@@ -5,7 +5,7 @@
         <link href="https://fonts.googleapis.com/css2?family=Inter:wght@800&display=swap" rel="stylesheet"> 
         <meta charset="UTF-8">
         <title>about</title>
-        <link href="/website/styles/style.css" rel="stylesheet" type="text/css" media="all"><style>
+        <link href="/website/styles/newstyle.css" rel="stylesheet" type="text/css" media="all"><style>
             p{max-width: 775px}
         </style></head>
 
