--- a/misc/folder.html
+++ b/misc/folder.html
@@ -13,8 +13,9 @@
     <body>
 
     <h1>folder</h1>
-    <p>You open the folder.
-    </p>
+    <p>You open the folder.</p>
+
+    > <a href="/website/misc/folder/index">index</a>: an earlier version of the start page.<br>
     <details>
         <summary><a>handdrawn/doodle</a></summary>
         When i originally made the handdrawn/doodles page, as the name suggested, everything was supposed to be handdrawn, even the text. But after trying to chroma key the text+drawings out (because i didn't want an ugly border in the images), 
@@ -32,6 +33,7 @@
         </ul>
     </details>
     > <a href="/website/misc/folder/difference">difference</a>: a thing about the importance of difference. Moved it here because it... doesn't really fit.<br>
+    > <a href="/website/misc/folder/hi">hi</a>: hi<br>
     > <a href="/website/misc/folder/ilo_katen">ilo Katen</a>: a toki pona diary entry thing from a future.<br>
     > <a href="/website/misc/folder/monsuta.png">monsuta</a>: i originally put this in the blender page upstairs, but the contrast sucked so i took it out. now it's here.<br>
     > <a href="/website/misc/folder/square.png">square</a>: another thing from the blenders, this time removed because it messed up the spacing.<br>
