--- a/misc/folder/index.html
+++ b/misc/folder/index.html
@@ -62,7 +62,7 @@
         <a href="/website/misc" class="misc">misc</a> .......... <span class="small">other things</span><br>
         <br>
         <a href="/website/buttons" class="buttons">buttons</a> .......... <span class="small">links to other websites</span><br>
-        <a href="https://cvni81.123guestbook.com/">guestbook</a> .......... <span class="small">say hi!</span><br>
+        <a href="/404.html"><s>guestbook</s></a> .......... <span class="small">say hi!</span><br>
         <a href="/website/sitelog" class="log">sitelog</a> .......... <span class="small">changes to the site</span>
     </div>
     </div>
