--- a/sitelog.html
+++ b/sitelog.html
@@ -33,6 +33,9 @@
     <p><b>More about the site: </b> I make this site with Firefox in Ubuntu, with a crappy 1366x768 display<br>very much untested on mobile, sorry<br>and that's it enjoy the sitelog ig</p>
         <div id="entry" style="margin-bottom: 25px; margin-top: 25px"><div id="statuscafe"><div id="statuscafe-username"></div><div id="statuscafe-content"></div></div><script src="https://status.cafe/current-status.js?name=cvni81" defer></script></div>
     <div id="entry">
+        <h2>25/10/2022 15:58</h2>
+        <p>Changed the intro page to be more simplistic and removed the sidebar.</p>    
+    </div><div id="entry">
         <h2>8/10/2022 08:09</h2>
         <p>Changed the website style to a blue/yellowish theme! Much better than the boring blacks and greys. Also i added an arrow to the sidebar so it's easier to tell what page you're in!</p>    
     </div><div id="entry">
