--- a/doodles/etc.html
+++ b/doodles/etc.html
@@ -37,6 +37,7 @@
         <div class="main">
         <img src="/website/doodles/etcheader.gif" alt="etc" style="height:120px; margin-bottom:20px" class="header"><br>
         <div id="drawings" style="width:650px; margin-top:20px">
+        <img src="/website/doodles/etc/cat_doodles.jpg" alt="cat doodles" style="width:100%;">
         <img src="/website/doodles/etc/cat_spotlight.jpg" alt="cat spotlight" style="width:100%;">
         <img src="/website/doodles/etc/et.jpg" alt="et" style="width:100%;">
         <img src="/website/doodles/etc/graphite.jpg" alt="graphite" style="width:100%;">
